--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
             Let's bring extraordinary ideas to life together!"</p><br>
         <span class="edu"><img src="education.jpg">Education</span>
         <p>I completed my senior secondary education at Green valley public School, 
-            where I built a strong foundation in Python programming.
+            where I built a strong foundation in Python programming.KL
             Even before my intermediate years, I had ventured into the basics of web development, mastering HTML and CSS. Currently, 
             I am pursuing a B.Tech degree in Computer Science and Engineering, 
             honing my skills in C/C++, advanced web development, and 3D modeling using AutoCAD Inventor. 
-            Along the way, I've embraced opportunities to grow, including participating in a hackathon where 
-            I secured 4th place and earned the title of 'Special Winner' for my innovative approach.</p><br>
+            Along the way, I've embraced opportunities to grow, including participating in a hackathon where.</p><br>
         <span class="edu"><img src="ex.jpg">Experience</span>
-        <p><span class="one">Hackathon Achiever: Earned the 'Special Winner' title for innovative problem-solving.</span>
+        <p>
             <span class="two">Web Development: Built responsive websites using HTML, CSS, and JavaScript</span>
             <span class="three">3D Modeling: Created detailed prototypes with AutoCAD Inventor.</span>
             <span class="four"></span>Programming Projects: Collaborated on Python and C/C++ coding project</p>    
